# cnn_forward

./: .gitignore  CMakeLists.txt
include/: armor_judger.hpp  num_recog.hpp
include/cnn_layers/: conv.hpp  fully_connect.hpp  pooling.hpp  relu.hpp  softmax.hpp
src/: conv.cpp  fully_connect.cpp  main.cpp  pooling.cpp  relu.cpp  softmax.cpp
weights/: conv1.bias  conv1.weights  conv2.bias  conv2.weights  fc.bias  fc.weights
